// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Renders default empty state 1`] = `
<styled.div
  data-component-type="empty_state"
>
  <styled.div>
    Oops... We couldn't find anything for this section.
  </styled.div>
  <styled.div>
    Please speak to your system admin or add information.
  </styled.div>
</styled.div>
`;

exports[`EmptyState Renders successfully with both primaryMessage, secondaryMessage and buttonComponent 1`] = `
<styled.div
  data-component-type="empty_state"
>
  <styled.div>
    This is a primary message
  </styled.div>
  <styled.div>
    This is a secondary message
  </styled.div>
  <LinkButton
    anchorComponentProps={
      Object {
        "useReactRouter": false,
      }
    }
    disabled={false}
    hasLegacyMargins={false}
    href="www.google.com.au"
    iconAlignment="left"
    showSpinner={false}
    size="small"
    type="neutral"
  >
    Add Address
  </LinkButton>
</styled.div>
`;

exports[`EmptyState Renders successfully with null messages 1`] = `
<styled.div
  data-component-type="empty_state"
/>
`;

exports[`EmptyState Renders successfully with primaryMessage only 1`] = `
<styled.div
  data-component-type="empty_state"
>
  <styled.div>
    This is a primary message
  </styled.div>
  <styled.div>
    Please speak to your system admin or add information.
  </styled.div>
</styled.div>
`;

exports[`EmptyState Renders successfully with secondaryMessage only 1`] = `
<styled.div
  data-component-type="empty_state"
>
  <styled.div>
    Oops... We couldn't find anything for this section.
  </styled.div>
  <styled.div>
    This is a secondary message
  </styled.div>
</styled.div>
`;
